--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ if(FAISS_ENABLE_C_API)
 endif()
 
 add_subdirectory(demos)
-add_subdirectory(eval)
+add_subdirectory(eval/test)
 add_subdirectory(tutorial/cpp)
 
 # CTest must be included in the top level to enable `make test` target.
