--- a/eval/test/CMakeLists.txt
+++ b/eval/test/CMakeLists.txt
@@ -4,6 +4,8 @@
 # This source code is licensed under the BSD-style license found in the
 # LICENSE file in the root directory of this source tree.
 
-add_executable(test_pipe_cpu EXCLUDE_FROM_ALL test_pipe_cpu.cpp)
-target_link_libraries(test_pipe_cpu PRIVATE faiss)
+add_executable(test_memory EXCLUDE_FROM_ALL test_memory.cpp)
+target_link_libraries(test_memory PRIVATE faiss)
 
+add_executable(test_avl EXCLUDE_FROM_ALL test_avl.cpp)
+target_link_libraries(test_avl PRIVATE faiss)
