--- a/faiss/gpu/CMakeLists.txt
+++ b/faiss/gpu/CMakeLists.txt
@@ -177,8 +177,14 @@ foreach(header ${FAISS_GPU_HEADERS})
   )
 endforeach()
 
+list (APPEND PRJ_COMPILE_OPTIONS -Xcompiler)
+find_package (OpenMP)
+if (OpenMP_FOUND)
+	list ( APPEND PRJ_COMPILE_OPTIONS ${OpenMP_CXX_FLAGS} )
+endif ()
+
 find_package(CUDAToolkit REQUIRED)
 target_link_libraries(faiss PRIVATE CUDA::cudart CUDA::cublas)
 target_link_libraries(faiss_avx2 PRIVATE CUDA::cudart CUDA::cublas)
-target_compile_options(faiss PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Xfatbin=-compress-all>)
-target_compile_options(faiss_avx2 PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Xfatbin=-compress-all>)
+target_compile_options(faiss PUBLIC $<$<COMPILE_LANGUAGE:CUDA>:-Xfatbin=-compress-all> ${PRJ_COMPILE_OPTIONS})
+target_compile_options(faiss_avx2 PUBLIC $<$<COMPILE_LANGUAGE:CUDA>:-Xfatbin=-compress-all> ${PRJ_COMPILE_OPTIONS})
