final version (before test)

--- a/eval/test/CMakeLists.txt
+++ b/eval/test/CMakeLists.txt
@@ -34,3 +34,5 @@ target_link_libraries(test_pthread PRIVATE faiss)
 add_executable(test_multi EXCLUDE_FROM_ALL test_multi_sort.cpp)
 target_link_libraries(test_multi PRIVATE faiss)
 
+add_executable(test_process EXCLUDE_FROM_ALL test_process.cu)
+target_link_libraries(test_process PRIVATE faiss)
