--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,11 +46,11 @@ add_subdirectory(demos)
 add_subdirectory(tutorial/cpp)
 
 # CTest must be included in the top level to enable `make test` target.
-include(CTest)
-if(BUILD_TESTING)
-  add_subdirectory(tests)
+# include(CTest)
+# if(BUILD_TESTING)
+#   add_subdirectory(tests)
 
-  if(FAISS_ENABLE_GPU)
-    add_subdirectory(faiss/gpu/test)
-  endif()
-endif()
+#   if(FAISS_ENABLE_GPU)
+#     add_subdirectory(faiss/gpu/test)
+#   endif()
+# endif()
