--- a/faiss/CMakeLists.txt
+++ b/faiss/CMakeLists.txt
@@ -217,8 +217,8 @@ target_compile_definitions(faiss PRIVATE FINTEGER=int)
 target_compile_definitions(faiss_avx2 PRIVATE FINTEGER=int)
 
 find_package(OpenMP REQUIRED)
-target_link_libraries(faiss PRIVATE OpenMP::OpenMP_CXX)
-target_link_libraries(faiss_avx2 PRIVATE OpenMP::OpenMP_CXX)
+target_link_libraries(faiss PUBLIC OpenMP::OpenMP_CXX)
+target_link_libraries(faiss_avx2 PUBLIC OpenMP::OpenMP_CXX)
 
 find_package(MKL)
 if(MKL_FOUND)
