--- a/eval/CMakeLists.txt
+++ b/eval/CMakeLists.txt
@@ -5,4 +5,7 @@
 # LICENSE file in the root directory of this source tree.
 
 add_executable(overall EXCLUDE_FROM_ALL overall.cpp)
-target_link_libraries(overall PRIVATE faiss)
+target_link_libraries(overall PUBLIC faiss)
+
+add_executable(process-data EXCLUDE_FROM_ALL process-data.cpp)
+target_link_libraries(process-data PUBLIC faiss)
