--- a/eval/CMakeLists.txt
+++ b/eval/CMakeLists.txt
@@ -9,3 +9,6 @@ target_link_libraries(overall PUBLIC faiss)
 
 add_executable(comparison EXCLUDE_FROM_ALL comparison.cpp)
 target_link_libraries(comparison PUBLIC faiss)
+
+add_executable(comparison-hnsw EXCLUDE_FROM_ALL comparison-hnsw.cpp)
+target_link_libraries(comparison-hnsw PUBLIC faiss)
